style.css
:root {
  --cafe-noir: #593f28;
  --dark-brown: #593e1c;
  --camel: #bf9969;
  --deep-champagne: #f2d194;
  --blond: #fef6c9;
  --day-sky: #d5e2f2;
  --night-sky: #252850;
  --night-brown: #24160f;
  --good-input: #00ff9d;

  --aside-card: var(--dark-brown);
  --main: var(--day-sky);
}

.dark-theme {
  --aside-card: var(--night-brown);
  --main: var(--night-sky);
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  transition: background-color 1s ease;
}

body {
  position: relative;
  display: flex;
  min-height: 100vh;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  color: var(--blond);
  overflow: hidden;
}

a {
  width: 100%;
}

h2 {
  text-align: center;
}

main {
  flex-wrap: wrap;
  width: 70vw;
  min-height: 100%;
  padding: 1.5rem;
  gap: 2rem 1rem;
  background-color: var(--main);
}

aside {
  position: sticky;
  top: 0;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 30vw;
  height: 100vh;
  padding: 1rem;
  background-color: var(--aside-card);
  border-right: solid 2px black;
}

header {
  font-size: 1.3rem;
  gap: 1rem;
}

nav {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 5vh 5vh;
  grid-gap: 1rem;
  width: 100%;
  margin-inline: auto;
}

input[type="checkbox"] {
  width: 30px;
  height: 30px;
  opacity: 10;
}

label {
  text-align: center;
  margin-left: 0.5rem;
}

footer {
  position: relative;
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.add-book,
svg {
  fill: var(--blond);
  transition: transform 0.5s ease;
}

.add-book {
  width: 200px;
  height: 275px;
  border-radius: 15px;
  background-color: var(--aside-card);
}

.add-book:hover {
  transform: scale(1.05);
}

.add-book:hover svg {
  transform: rotate(180deg) scale(1.05);
}

.logo {
  width: 64px;
}

.btn-theme {
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.add,
.delete {
  border-radius: 15px;
}

.add:hover,
.delete:hover {
  opacity: 0.8;
}

.add:active,
.delete:active {
  opacity: 1;
}

.add {
  background-color: lime;
}

.delete {
  background-color: red;
}

.info-box {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 40%;
}

.content {
  display: flex;
  justify-content: space-between;
}

.fa-github {
  transition: transform 0.3s ease-in-out;
  margin-left: 0.5rem;
}

.fa-github:hover {
  transform: rotate(360deg) scale(1.2);
}

.info {
  width: 25px;
  border-radius: 50%;
  background-color: var(--blond);
  margin-left: 0.5rem;
}

.info:hover {
  transform: scale(1.2);
}

.reference {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: absolute;
  bottom: 35px;
  left: 0px;
  width: 500px;
  height: 30px;
  background-color: black;
  border-radius: 5px;
  animation: opacity 0.5s ease;
}

.visibility {
  display: none;
}

.reference:hover {
  display: flex;
}

@keyframes opacity {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

/* Book Card */

input[type="number"]::-webkit-inner-spin-button,
::-webkit-outer-spin-button {
  display: none;
}

.flip-box {
  position: relative;
  background: transparent;
  width: 200px;
  height: 275px;
  perspective: 1000px;
}

@keyframes delete {
  from {
    opacity: 1;
    transform: rotateY(720deg);
  }
  to {
    opacity: 0;
  }
}

.card {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 15px;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

.flip-box:hover .card {
  transform: rotateY(180deg) scale(1.05);
}

.card-front,
.card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 15px;
  backface-visibility: hidden;
}

.card-front {
  color: white;
  text-align: center;
  background-color: var(--aside-card);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.err-message {
  position: absolute;
  top: 20vh;
  left: 25vw;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  width: 50vw;
  height: 30vh;
  padding: 1rem;
  border-radius: 1rem;
  background-color: grey;
}

.err-message > button {
  width: 15%;
  aspect-ratio: 3/1.2;
}

.card-back {
  background: #f2d194;
  color: black;
  transform: rotateY(180deg);
  padding: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.content-card {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 85%;
}

.content-card h2 {
  font-size: 1.17rem;
}

.pages-info div:last-of-type {
  border-left: solid 2px black;
}

.pages-info {
  display: flex;
  width: 100%;
}

.pages-info > * {
  width: 50%;
  text-align: center;
}

.author {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  height: 20%;
}

.author h3 {
  margin-left: 0.8rem;
}

.description {
  height: 80%;
}

.description h2 {
  margin-bottom: 0.3rem;
  text-align: start;
}

.title {
  margin-top: 1rem;
  margin-inline: auto;
  text-align: center;
  width: 90%;
}

.title p {
  font-size: 2rem;
  word-break: keep-all;
}

#number {
  all: unset;
  width: 50%;
  text-align: center;
}

/* form */

#add-book {
  position: absolute;
  width: 100%;
  height: 100%;
}

#add-book input,
#add-book textarea {
  background-color: var(--camel);
}

#add-book input {
  width: 100%;
  padding-inline: 5px;
  border: none;
  border-radius: 15px;
}

#add-book textarea {
  all: unset;
  border: solid 1px black;
  color: black;
  background-color: var(--camel);
}

#add-book button {
  width: 49%;
}

.background {
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
  background-color: black;
  opacity: 0.5;
}

.form {
  position: fixed;
  top: 5%;
  left: 35%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 30%;
  height: 90%;
  padding: 1rem;
  border-radius: 15px;
  background-color: var(--aside-card);
  opacity: 1;
  z-index: 2;
}

.field {
  display: flex;
  flex-direction: column;
  margin-bottom: 0.5rem;
  overflow: hidden;
}

.field-numbers {
  display: flex;
  justify-content: space-between;
}

.field-numbers .field {
  width: 49%;
}

.btns {
  width: 100%;
}

.display {
  display: block;
}

.invisible {
  display: none;
}

.shadow {
  box-shadow: 5px 5px 45px 25px rgba(13, 130, 255, 0.7);
}

.delete-btn {
  position: absolute;
  top: -3%;
  left: 90%;
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background-color: red;
  transition: all 0.8s;
  cursor: pointer;
}

.flip-box:hover .delete-btn {
  top: -5%;
  left: 95%;
}

.error {
  height: 0;
  color: rgb(255, 0, 0);
  transition: 0.5s;
}
input:invalid:focus:not(:placeholder-shown) + .error {
  height: 30px;
}

input:invalid:not(:focus):not(:placeholder-shown) {
  background-color: hsl(0, 100%, 65%) !important;
}

:focus {
  outline: 0;
}

.auth-container {
  position: fixed;
  top: 20px;
  right: 20px;
  z-index: 1;
  font-size: 14px;
  font-weight: 500;
}

.auth-container .hidden {
  display: none;
}

.auth-container button {
  border: none;
  cursor: pointer;
}

.user-container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  padding: 10px 20px;
  border-radius: 10px;
  background-color: var(--aside-card);
}

.user-pic {
  width: 46px;
  height: 46px;
  border-radius: 50%;
  overflow: hidden;
}

.user-pic[src=""] {
  display: none;
}

.user-name {
  font-size: 16px;
}

.sign-in-google {
  display: flex;
  align-items: center;
  gap: 10px;
  padding: 5px 10px;
  border-radius: 5px;
  background-color: #4285f4;
  color: white;
  font-size: 14px;
}

.google-logo {
  width: 36px;
  height: 36px;
}

.sign-out {
  position: relative;
  top: 2px;
  background-color: transparent;
  color: inherit;
  font-family: inherit;
}

.underline {
  width: 0;
  height: 2px;
  background-color: var(--blond);
  transition: width 0.3s ease;
}

.sign-out:hover .underline {
  width: 100%;
}

